// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`COffcanvasHeader customize 1`] = `
<div>
  <div
    class="offcanvas-header bazinga"
  >
    Test
  </div>
</div>
`;

exports[`loads and displays COffcanvasHeader component 1`] = `
<div>
  <div
    class="offcanvas-header"
  />
</div>
`;
